opam-version: "2.0"
name: "CsharpExcep"
version: "0.0.1"
synopsis: "Csharp with exceptions"
description: "сделаны стандартные типы: строки, целые числа, и операции с ними \n сделана рекурсия \n сделано класс Exception \n сделано try/catch/finally without filter \n сделаны тесты demoException, demoInterpreter, а также inline тесты парсера\n "
maintainer: "Artem Motika"
authors: "Artem Motika"
license: "LGPL-3.0-only"
homepage: "-"
bug-reports: "-"
depends: [
  "dune" {>= "2.8"}
  "opal"
  "ppx_inline_test" {with-test}
  "qcheck-core"
  "ppx_expect"
  "ppx_deriving"
  "odoc" {with-doc}
  "ocamlformat" {build}
  "base"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
