(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-only)

(authors "Vladislav Kasimov")

(maintainers "Vladislav Kasimov")

(bug_reports "vladislavkasimov@gmail.com")

(homepage "https://github.com/rudolf101/fp2021")

(package
 (name OCamlLabeled) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "OCaml + Labeled arg")
 (description
  "FIXME. A longer description, for example, which are the most interesing features being supported, etc.")
 (version 1.0)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_deriving
  ppx_expect
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
