(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-only)

(authors "Svyatoslav Latokhin")

(maintainers "https://github.com/SlavaLatokhin")

(bug_reports "https://github.com/SlavaLatokhin/fp2021/pulls")

(homepage "https://github.com/SlavaLatokhin/fp2021")

(package
 (name Scheme_call) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "FIXME An interpreter for language")
 (description
  "FIXME. A longer description, for example, which are the most interesing features being supported, etc.")
 (version 0.1)
 (depends
  dune
  opal
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_expect
  ppx_show
  ppx_deriving
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
