(executable
 (name demoInterpreter)
 (modules demoInterpreter)
 (libraries CsharpExcep.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoException)
 (modules demoException)
 (libraries CsharpExcep.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq)))

(cram
 (deps ./demoInterpreter.exe ./demoException.exe))
