(executable
 (name demoOnlyPrint)
 (modules demoOnlyPrint)
 (libraries CsharpExcep.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show)))

(executable
 (name demoShowContext)
 (modules demoShowContext)
 (libraries CsharpExcep.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show)))

(cram
 (deps ./demoOnlyPrint.exe ./demoShowContext.exe))
